--- a/pwm_test/Cargo.toml
+++ b/pwm_test/Cargo.toml
@@ -11,6 +11,7 @@ embedded-hal = "0.2.3"
 # Remove me if you don't want logging
 log = "0.4.11"
 teensy4-panic = "0.2.0"
+imxrt-hal = "0.4.5"
 
 [dependencies.teensy4-bsp]
 version = "0.3"
